# covid-databricks

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  environment.yml
jobs/: gold.py  raw-ingestion.py  silver.py
runners/: 00_bronze.ipynb  01_silver-analysis.ipynb  01_silver.ipynb  covid.ipynb  gold.ipynb
src/covid/bronze/: __init__.py  ingestion.py
src/covid/common/: __init__.py  io_utils.py  spark_session_service.py
src/covid/gold/: __init__.py  cases_per_region.py  cases_per_state.py
src/covid/silver/: __init__.py  t01_feature_engineering.py  t02_smooth_series.py
src/covid/utils/: spark_session_service.py
tests/: conftest.py
tests/silver/: test_feature_engineering.py
util/: initialize_db.py
