[project]
name = "covid"
version = "0.3.0"
description = ""
authors = [
    {name = "Carlos Zansavio",email = "carloshlzansavio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "covid", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
